--- a/index.html
+++ b/index.html
@@ -62,6 +62,6 @@
         </section>
     </div>
 </main>
-<script src="/js/index.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
