Affichage des photographes via le fichier JSON en javascript
AJOUT DES ATTRIBUTS ACCESSIBLES
AJOUT DU LIEN "Passer au contenu"

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
 <!-- EN-TETE -->
 <div class="container">
+    <a href="#main" id="linkToMain" class="linkToMain" aria-label="Passer au contenu">
+        Passer au contenu
+    </a>
     <header class="header" role="banner">
         <a href="#" class="header-svg" aria-label="Logo de fisheye">
             <svg role="img" alt="Logo de fisheye" width="200" height="50" viewBox="0 0 200 50" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -55,7 +58,7 @@
     </header>
 </div>
 <!-- CONTENU PRINCIPALE -->
-<main class="main" role="main">
+<main class="main"  id="#main" role="main">
     <div class="container">
         <section class="articles" id="articles">
  <!-- PRESENTATION DES PHOTOGRAPHES -->             
