Amélioration de l'accessibilité en html, js et css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         Passer au contenu
     </a>
     <header class="header" role="banner">
-        <a href="#" class="header-svg" aria-label="Logo de fisheye">
+        <a href="/" class="header-svg" aria-label="Logo de fisheye">
             <svg role="img" alt="Logo de fisheye" width="200" height="50" viewBox="0 0 200 50" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M24.7206 0.911621V6.51058H6.31164V17.5783H21.4333V22.9168H6.31164V39.1929H0V0.911621H24.7206Z" fill="#911C1C"/>
                 <path d="M34.5826 1.04167C35.2401 1.69271 35.6346 2.60417 35.6346 3.64583C35.6346 4.6875 35.2401 5.46875 34.5826 6.11979C33.9252 6.77083 33.0047 7.16146 31.9528 7.16146C30.9008 7.16146 30.1119 6.77083 29.3229 6.11979C28.6655 5.46875 28.271 4.55729 28.271 3.64583C28.271 2.60417 28.6655 1.82292 29.3229 1.04167C29.9804 0.390625 30.9008 0 31.9528 0C33.0047 0 33.7937 0.390625 34.5826 1.04167ZM34.8456 11.1979V39.1927H28.9285V11.1979H34.8456Z" fill="#911C1C"/>
@@ -26,31 +26,31 @@
                 <path d="M135.437 7.94287H129.257L125.707 4.03662H114.004L110.454 7.94287H104.273C102.17 7.94287 100.329 9.63558 100.329 11.8491V35.0262C100.329 37.1095 102.038 38.9324 104.273 38.9324H135.437C137.541 38.9324 139.382 37.2397 139.382 35.0262V11.7189C139.382 9.63558 137.672 7.94287 135.437 7.94287ZM135.437 34.896H104.405V11.7189H112.294L115.845 7.81266H124.129L127.548 11.7189H135.437V34.896ZM119.921 13.672C114.53 13.672 110.191 17.9689 110.191 23.3075C110.191 28.646 114.53 32.9429 119.921 32.9429C125.312 32.9429 129.651 28.646 129.651 23.3075C129.651 17.9689 125.312 13.672 119.921 13.672ZM119.921 29.1668C116.765 29.1668 114.135 26.5627 114.135 23.4377C114.135 20.3127 116.765 17.7085 119.921 17.7085C123.077 17.7085 125.707 20.3127 125.707 23.4377C125.707 26.5627 123.077 29.1668 119.921 29.1668Z" fill="#911C1C"/>
             </svg>         
         </a>
-        <nav role="navigation" class="header-navigation" aria-label="Les étiquettes des photographes">
+        <nav role="navigation" class="header-navigation" aria-label="Liste des étiquettes des photographes.">
             <ul>
                 <li class="header-navigation-item">
-                    <a href="#" onclick="f_js_filter_tags('Portrait')">#Portrait</a>
+                    <a aria-label="Filtrer sur le tag portrait." href="javascript:void(0);">#Portrait</a>
                 </li>
                 <li class="header-navigation-item">
-                    <a href="#" onclick="f_js_filter_tags('Art')">#Art</a>
+                    <a aria-label="Filtrer sur le tag Art." href="javascript:void(0);">#Art</a>
                 </li>
                 <li class="header-navigation-item">
-                    <a href="#" onclick="f_js_filter_tags('Fashion')">#Fashion</a>
+                    <a aria-label="Filtrer sur le tag Fashion." href="javascript:void(0);">#Fashion</a>
                 </li>
                 <li class="header-navigation-item">
-                    <a href="#" onclick="f_js_filter_tags('Architecture')">#Architecture</a>
+                    <a aria-label="Filtrer sur le tag Architecture." href="javascript:void(0);">#Architecture</a>
                 </li>
                 <li class="header-navigation-item">
-                    <a href="#" onclick="f_js_filter_tags('Travel')">#Travel</a>
+                    <a aria-label="Filtrer sur le tag Travel." href="javascript:void(0);">#Travel</a>
                 </li>
                 <li class="header-navigation-item">
-                    <a href="#" onclick="f_js_filter_tags('Sport')">#Sport</a>
+                    <a aria-label="Filtrer sur le tag Sport." href="javascript:void(0);">#Sport</a>
                 </li>
                 <li class="header-navigation-item">
-                    <a href="#" onclick="f_js_filter_tags('Animals')">#Animals</a>
+                    <a aria-label="Filtrer sur le tag Animals." href="javascript:void(0);">#Animals</a>
                 </li>
                 <li class="header-navigation-item">
-                    <a href="#" onclick="f_js_filter_tags('Events')">#Events</a>
+                    <a aria-label="Filtrer sur le tag Events." href="javascript:void(0);">#Events</a>
                 </li>
             </ul>
         </nav>
