Poursuite de l'amélioration de accessibilité
Ajout du focus sur le premier photographe après avoir cliquer sur le bouton passer au contenu
Amélioration du label des aria formulaire

--- a/profilPhotographe.html
+++ b/profilPhotographe.html
@@ -86,7 +86,7 @@
                                 type="text"
                                 id="first"
                                 name="first"
-                                aria-labelledby="Prénom"
+                                aria-labelledby="Entrer votre prénom"
                                 required
                             />
                         </div>
@@ -98,7 +98,7 @@
                                 type="text"
                                 id="last"
                                 name="last"
-                                aria-labelledby="Nom"
+                                aria-labelledby="Entrer votre nom"
                                 required
                             />
                         </div>
@@ -110,7 +110,7 @@
                                 type="email"
                                 id="email"
                                 name="email"
-                                aria-labelledby="Email"
+                                aria-labelledby="Entrer votre email"
                                 required
                             />
                         </div>
@@ -122,12 +122,12 @@
                                 type="date"
                                 id="message"
                                 name="message"
-                                aria-labelledby="Votre message"
+                                aria-labelledby="Entrer votre message"
                                 required
                             ></textarea>
                         </div>
                         <div class="formSubmit">
-                            <button class="btn default" type="submit" aria-labelledby="Envoyer">Envoyer</button>
+                            <button class="btn default" type="submit" aria-labelledby="Cliquer sur envoyer pour valider le formulaire">Envoyer</button>
                         </div>
                     </form>
                 </div>
