Résolution d'un bug js
Amélioration html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <!-- EN-TETE -->
 <div class="container">
-    <a href="#main" id="linkToMain" class="linkToMain" aria-label="Cliquer sur le bouton pour accéder directement au contenu.">
+    <a href="#main" id="linkToMain" class="linkToMain" title="Cliquer sur le bouton pour accéder directement au contenu.">
         Passer au contenu
     </a>
     <header class="header" role="banner">
