Amélioration du code html

--- a/profilPhotographe.html
+++ b/profilPhotographe.html
@@ -12,8 +12,8 @@
 <body>
 <!-- EN-TETE -->
 <div class="container">
-    <header class="header" role="banner">
-        <a href="/" class="header-svg" aria-label="Logo de fisheye">
+    <header class="header">
+        <a href="/index.html" class="header-svg" aria-label="Logo de fisheye" title="Logo de fisheye">
             <svg role="img" alt="Logo de fisheye" width="200" height="50" viewBox="0 0 200 50" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M24.7206 0.911621V6.51058H6.31164V17.5783H21.4333V22.9168H6.31164V39.1929H0V0.911621H24.7206Z" fill="#911C1C"/>
                 <path d="M34.5826 1.04167C35.2401 1.69271 35.6346 2.60417 35.6346 3.64583C35.6346 4.6875 35.2401 5.46875 34.5826 6.11979C33.9252 6.77083 33.0047 7.16146 31.9528 7.16146C30.9008 7.16146 30.1119 6.77083 29.3229 6.11979C28.6655 5.46875 28.271 4.55729 28.271 3.64583C28.271 2.60417 28.6655 1.82292 29.3229 1.04167C29.9804 0.390625 30.9008 0 31.9528 0C33.0047 0 33.7937 0.390625 34.5826 1.04167ZM34.8456 11.1979V39.1927H28.9285V11.1979H34.8456Z" fill="#911C1C"/>
@@ -25,12 +25,12 @@
             </svg>         
         </a>
     </header>
-    <div class="bio" role="biographie">
+    <section class="bio">
 <!-- BIO DU PHOTOGRAPHE --> 
-    </div>
+    </section>
 </div>
 <!-- CONTENU PRINCIPALE -->
-<main class="main"  id="#main" role="main">
+<main class="main"  id="#main">
     <div class="container">
         <div class="popular" id="popular" role="dialog">
             <p class="popular-likes"></p>
@@ -39,7 +39,7 @@
         </div>
         <div class="filter">
             <label class="filter-label">Tier par </label>
-            <div class="filter-dropdown" role="menu">
+            <div class="filter-dropdown" role="navigation">
                 <button aria-label="Filtrer sur la popularité" class="filter-dropbtn" id="triByPopular" aria-haspopup="true" aria-expanded="false">Popularité
                     <svg role="icon" alt="Afficher le menu de tri" width="16" height="10" viewBox="0 0 16 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M1 1.33447L8.00465 8.13311L14.5973 1.33447" stroke="#E9E9E9" stroke-width="2"/>
@@ -51,7 +51,7 @@
                 </div>
             </div>
         </div>
-        <section class="portfolio" role="portfolio">
+        <section class="portfolio" >
 <!-- PRESENTATION DES PHOTOGRAPHES -->             
         </section>
 <!-- LIGTHBOX -->
@@ -71,15 +71,8 @@
                     <a href="javascript:void(0);" aria-label="Filtrer la modal du formulaire" id="closeModal" class="closeModal"></a>
                 </div>
                 <div class="modal-body">
-                    <form
-                        id="reserve"
-                        name="reserve"
-                        action="index.html"
-                        method="get"
-                        onsubmit="return f_js_validate();"
-                    >
-                        <div
-                            class="formData">
+                    <form id="reserve" name="reserve" action="index.html" method="post" onsubmit="return f_js_validate();">
+                        <div class="formData">
                             <label for="first">Prénom</label>
                             <input
                                 class="text-control"
@@ -90,8 +83,7 @@
                                 required
                             />
                         </div>
-                        <div
-                            class="formData">
+                        <div class="formData">
                             <label for="last">Nom</label>
                             <input
                                 class="text-control"
@@ -102,8 +94,7 @@
                                 required
                             />
                         </div>
-                        <div
-                            class="formData">
+                        <div class="formData">
                             <label for="email">E-mail</label>
                             <input
                                 class="text-control"
@@ -114,12 +105,10 @@
                                 required
                             />
                         </div>
-                        <div
-                            class="formData">
+                        <div class="formData">
                             <label for="message">Message</label>
                             <textarea rows="10" cols="50"
                                 class="textarea-control"
-                                type="date"
                                 id="message"
                                 name="message"
                                 aria-labelledby="Entrer votre message"
