Remplacement icon heart par img

--- a/profilPhotographe.html
+++ b/profilPhotographe.html
@@ -65,10 +65,10 @@
         </div>
 <!-- MODAL -->        
         <div class="bgroundModal">
-            <div class="content" role="dialog" id="dialog1_label" aria-labelledby="Contactez-moi Mimi keel" aria-modal="true">
+            <div class="content" role="dialog" aria-labelledby="Contactez-moi Mimi keel" aria-modal="true">
                 <div class="headerModal">
                     <h1 class="headerModal-titleFormModal" id="dialog1_label"></h1>
-                    <a href="javascript:void(0);" aria-label="Filtrer la modal du formulaire" id="closeModal" class="closeModal"></a>
+                    <a href="javascript:void(0);" aria-label="Fermer la modal du formulaire" title="Fermer la modal du formulaire" id="closeModal" class="closeModal"></a>
                 </div>
                 <div class="modal-body">
                     <form id="reserve" name="reserve" action="index.html" method="post" onsubmit="return f_js_validate();">
