Changement sur l'icon allLikes

--- a/profilPhotographe.html
+++ b/profilPhotographe.html
@@ -34,7 +34,7 @@
     <div class="container">
         <div class="popular" id="popular" role="dialog">
             <p class="popular-likes"></p>
-            <i class="far fa-heart fas"></i>
+            <img class="portfolio-iconPopular" alt="" src="./images/icon/icons_heart_black.png"/>
             <p class="popular-price"></p>
         </div>
         <div class="filter">
