Amélioration de l'accessibilité

--- a/profilPhotographe.html
+++ b/profilPhotographe.html
@@ -39,7 +39,7 @@
         </div>
         <div class="filter">
             <label class="filter-label">Tier par </label>
-            <div class="filter-dropdown" role="navigation">
+            <div class="filter-dropdown" role="navigation" aria-label="Menu pour trier les images.">
                 <button aria-label="Filtrer sur la popularité" class="filter-dropbtn" id="triByPopular" aria-haspopup="true" aria-expanded="false">Popularité
                     <svg role="icon" alt="Afficher le menu de tri" width="16" height="10" viewBox="0 0 16 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M1 1.33447L8.00465 8.13311L14.5973 1.33447" stroke="#E9E9E9" stroke-width="2"/>
