Correcteur de bugs

--- a/profilPhotographe.html
+++ b/profilPhotographe.html
@@ -71,7 +71,7 @@
                     <a href="javascript:void(0);" aria-label="Fermer la modal du formulaire" title="Fermer la modal du formulaire" id="closeModal" class="closeModal"></a>
                 </div>
                 <div class="modal-body">
-                    <form id="reserve" name="reserve" action="index.html" method="post" onsubmit="return f_js_validate();">
+                    <form id="reserve" name="reserve" action="/" method="post">
                         <div class="formData">
                             <label for="first">Prénom</label>
                             <input
