--- a/profilPhotographe.html
+++ b/profilPhotographe.html
@@ -13,7 +13,7 @@
 <!-- EN-TETE -->
 <div class="container">
     <header class="header">
-        <a href="/index.html" class="header-svg" aria-label="Logo de fisheye" title="Logo de fisheye">
+        <a href="./index.html" class="header-svg" aria-label="Logo de fisheye" title="Logo de fisheye">
             <svg role="img" alt="Logo de fisheye" width="200" height="50" viewBox="0 0 200 50" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M24.7206 0.911621V6.51058H6.31164V17.5783H21.4333V22.9168H6.31164V39.1929H0V0.911621H24.7206Z" fill="#911C1C"/>
                 <path d="M34.5826 1.04167C35.2401 1.69271 35.6346 2.60417 35.6346 3.64583C35.6346 4.6875 35.2401 5.46875 34.5826 6.11979C33.9252 6.77083 33.0047 7.16146 31.9528 7.16146C30.9008 7.16146 30.1119 6.77083 29.3229 6.11979C28.6655 5.46875 28.271 4.55729 28.271 3.64583C28.271 2.60417 28.6655 1.82292 29.3229 1.04167C29.9804 0.390625 30.9008 0 31.9528 0C33.0047 0 33.7937 0.390625 34.5826 1.04167ZM34.8456 11.1979V39.1927H28.9285V11.1979H34.8456Z" fill="#911C1C"/>
@@ -71,7 +71,7 @@
                     <a href="javascript:void(0);" aria-label="Fermer la modal du formulaire" title="Fermer la modal du formulaire" id="closeModal" class="closeModal"></a>
                 </div>
                 <div class="modal-body">
-                    <form id="reserve" name="reserve" action="/" method="post">
+                    <form id="reserve" name="reserve" action="./index.html" method="post">
                         <div class="formData">
                             <label for="first">Prénom</label>
                             <input
