Amélioration accessibilité formulaire

--- a/profilPhotographe.html
+++ b/profilPhotographe.html
@@ -79,7 +79,7 @@
                                 type="text"
                                 id="first"
                                 name="first"
-                                aria-labelledby="Entrer votre prénom"
+                                aria-label="Entrer votre prénom"
                                 required
                             />
                         </div>
@@ -90,7 +90,7 @@
                                 type="text"
                                 id="last"
                                 name="last"
-                                aria-labelledby="Entrer votre nom"
+                                aria-label="Entrer votre nom"
                                 required
                             />
                         </div>
@@ -101,7 +101,7 @@
                                 type="email"
                                 id="email"
                                 name="email"
-                                aria-labelledby="Entrer votre email"
+                                aria-label="Entrer votre email"
                                 required
                             />
                         </div>
@@ -111,7 +111,7 @@
                                 class="textarea-control"
                                 id="message"
                                 name="message"
-                                aria-labelledby="Entrer votre message"
+                                aria-label="Entrer votre message"
                                 required
                             ></textarea>
                         </div>
